fixes excess spacing around checkboxes and their labels, re #8254

--- a/arches/app/media/css/arches.scss
+++ b/arches/app/media/css/arches.scss
@@ -2710,6 +2710,10 @@ label.form-checkbox.form-normal{
         position: unset !important; // TODO: remove !important after nifty.css is purged
         margin: 5px;
     }
+
+    &>input[type="checkbox"]{
+        display: none;
+    }
 }
 
 .columns .form-text.form-checkbox:not(.btn),
